Fixed error with not animating project images
Fixed error with not animating project images on hover and click, also minimized layout shift on page load.
Исправлена ошибка, из-за которой изображения проекта не анимировались при наведении и клике, а также минимизировалось смещение макета при загрузке страницы.

--- a/css/style.css
+++ b/css/style.css
@@ -340,6 +340,108 @@ body {
   }
 }
 
+._animation-started .clicking-anim {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  background-color: #fff;
+  z-index: 3;
+  border-radius: 50%;
+  -webkit-animation: clicking-anim 1.5s linear 2;
+          animation: clicking-anim 1.5s linear 2;
+}
+
+@-webkit-keyframes clicking-anim {
+  0% {
+    opacity: 0;
+    width: 0px;
+    height: 0px;
+  }
+
+  9% {
+    opacity: 0.5;
+    width: 40px;
+    height: 40px;
+  }
+
+  15% {
+    opacity: 0.7;
+    width: 60px;
+    height: 60px;
+  }
+
+  21% {
+    opacity: 0.5;
+    width: 40px;
+    height: 40px;
+  }
+
+  30% {
+    width: 5px;
+    height: 5px;
+    opacity: 0;
+  }
+
+  31% {
+    width: 0px;
+    height: 0px;
+    opacity: 0;
+  }
+
+  100% {
+    width: 0px;
+    height: 0px;
+    opacity: 0;
+  }
+}
+
+@keyframes clicking-anim {
+  0% {
+    opacity: 0;
+    width: 0px;
+    height: 0px;
+  }
+
+  9% {
+    opacity: 0.5;
+    width: 40px;
+    height: 40px;
+  }
+
+  15% {
+    opacity: 0.7;
+    width: 60px;
+    height: 60px;
+  }
+
+  21% {
+    opacity: 0.5;
+    width: 40px;
+    height: 40px;
+  }
+
+  30% {
+    width: 5px;
+    height: 5px;
+    opacity: 0;
+  }
+
+  31% {
+    width: 0px;
+    height: 0px;
+    opacity: 0;
+  }
+
+  100% {
+    width: 0px;
+    height: 0px;
+    opacity: 0;
+  }
+}
+
 @-webkit-keyframes gradientHoverReverse {
   0% {
     background-size: 145%;
@@ -781,19 +883,14 @@ body {
   background-color: #42446e;
 }
 
+.lazy-load-parent picture {
+  position: relative;
+  z-index: 2;
+}
+
 .lazy-load-parent img {
   position: relative;
-  z-index: 1;
-}
-
-.lazy-load-parent picture {
-  z-index: 1;
-}
-
-.lazy-load-parent video {
-  position: relative;
-  z-index: 1;
-  opacity: 1;
+  z-index: 2;
 }
 
 .lazy-load-parent::after {
@@ -1814,6 +1911,7 @@ body {
 
 .main-screen__photo {
   max-width: 22.5rem;
+  width: 100%;
   border-radius: 50%;
   position: relative;
   overflow: hidden;
@@ -1832,14 +1930,23 @@ body {
 }
 
 .main-screen__photo img {
-  position: relative;
   z-index: 1;
   -o-object-fit: cover;
      object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
   border-radius: 50%;
   width: 100%;
   height: 100%;
   border: 9px transparent solid;
+}
+
+.main-screen__photo::after {
+  content: "";
+  display: block;
+  width: 100%;
+  padding-bottom: 100%;
 }
 
 .tech-stack__headings:not(:last-child) {
@@ -1868,18 +1975,6 @@ body {
 }
 
 .card-tech-stack img {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  -o-object-fit: contain;
-     object-fit: contain;
-  -o-object-position: center;
-     object-position: center;
-  width: 100%;
-  height: 100%;
-}
-
-.card-tech-stack picture {
   position: absolute;
   top: 0px;
   left: 0px;
@@ -1961,22 +2056,6 @@ body {
   cursor: pointer;
 }
 
-.card-project__picture picture {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 2;
-  -o-object-fit: cover;
-     object-fit: cover;
-  -o-object-position: top;
-     object-position: top;
-  -webkit-transition: top 5s;
-  -o-transition: top 5s;
-  transition: top 5s;
-}
-
 .card-project__picture img,
 .card-project__picture source,
 .card-project__picture video {
@@ -1984,7 +2063,6 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
   z-index: 2;
   -o-object-fit: cover;
      object-fit: cover;
@@ -1997,6 +2075,7 @@ body {
 
 .card-project__picture video {
   aspect-ratio: 16/9;
+  height: 100%;
 }
 
 .card-project__content {
